samples/_failures_safe/1761695238_0714b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98144af3.c: In function ‘main’:
./samples/SAFE/__tmp_98144af3.c:163:9: error: expected declaration or statement at end of input
  163 |         printf("Result matrix:\n");
      |         ^~~~~~
./samples/SAFE/__tmp_98144af3.c:163:9: error: expected declaration or statement at end of input
